Milestone4/static/css/style.css
/* CSS file parsed through https://autoprefixer.github.io/ to obtain web-kits needed
 where necessary to ensure as much cross-browser compatibility. */

/* Global Styles used through application */

    /* Font imports */
@import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed&display=swap');

    /* Margin & Padding reset */
* {
    margin: 0;
    padding: 0;
}

body {
    font-family: "Roboto Condensed", sans-serif;
    font-size: 1rem;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    min-height: 100vh;
}

/* Custom styled Browser Vertical Scrollbar */

body::-webkit-scrollbar {
    width: 10px;
}

    /* Inset Box shadow used with background to create depth for Scrollbar track */
body::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0, 0.2);
    /* 5-stop Gradient used to create smooth end to end finish to compliment thumb styles */
    background: -webkit-linear-gradient(#323232, #323232, #d8bb6c, #d8bb6c, #323232, #323232);
}

    /* Scrollbar thumb styles */
body::-webkit-scrollbar-thumb {
    width: 8px;
    border: 1px solid #323232;
    border-radius: 5px;
    /* Vertical Box-shadow only to simulate depth of thumb sitting into the Track */
    -webkit-box-shadow: 0 5px 3px rgba(100, 100, 100, 0.7);
    background: -webkit-linear-gradient(#ffe279, #d8bb6c, #c4a762, #d8bb6c, #ffe279);
}

/* Alerts */


/* Navbar */

    /* Custom Navbar BG color theme */
.bg-custom {
    background-color: #323232;
}

.navbar-brand img {
    height: 3.2rem;
}

    /* Navbar links set to default primary color of black using specificity */
.navbar .navbar-nav .nav-link {
    color: #ebf2ff;
}

.navbar .navbar-nav .nav-link:hover {
    color: #ffe279;
}

.navbar .navbar-toggler {
    border-color: transparent;
}

/* Footer */

footer {
    background-color: #323232;
    min-height: 3rem;
}

footer .row {
    margin: auto 0;
}

.additional-links-footer {
    margin-bottom: 0;
}

.additional-link {
    margin-bottom: 0.5rem;
    list-style: none;
}

.additional-link a {
    color: #ebf2ff;
}

.additional-link a:hover {
    color: #ffe279;
    text-decoration: none;
}

.dev-note {
    margin: auto 0;
}

.dev-note p {
    color: #ebf2ff;
    margin-bottom: 0.5rem;
}

.socials {
    margin: auto 0;
}

.social-links {
    margin-bottom: 0.5rem;
}

.social-links li a i{
    color: #ebf2ff;
    font-size: 1.5rem;
    margin: auto 0;
    cursor: pointer;
    vertical-align: middle;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

.social-links li a i:hover {
    color: #ffe279;
    font-size: 1.6rem;
}

/* Global page elements */

.content {
    margin: 77px auto 0;
    -webkit-box-flex: 1;
            -ms-flex: 1;
                flex: 1;
}

.brand-img {
    margin-bottom: 3rem;
}

    /* Bootstrap components custom styling */
.card {
    margin: 3rem 1rem;
    -webkit-box-shadow: 10px 10px 20px 0 rgba(67,35,68,0.20);
    -moz-box-shadow: 10px 10px 20px 0 rgba(67,35,68,0.20);
    box-shadow: 10px 10px 20px 0 rgba(67,35,68,0.20);
}

.card-title {
    font-family: "Roboto Condensed", sans-serif;
    margin-top: 1rem;
}

.card-body {
    font-family: "Lato", sans-serif;
}

.card-list {
    padding-left: 2.5rem;
}

/* Privacy Policy page */



/* Accessibility page */

